setup/runwhen-local/istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: runwhen-local-vs
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - robot-shop/robotshop-gateway
  http:
  - match:
    - uri:
        exact: /runwhen
    - uri:
        prefix: /runwhen/
    route:
    - destination:
        host: runwhen-local.monitoring.svc.cluster.local
        port:
          number: 8081
